- Columns using bitfields are not treated as number columns (e.g. don't get numeric class in list)

= 4.1.2
- Call cache_column_counts in get_row, so custom code changing queries to calculate counts is used when a row is refreshed too

= 4.1.1
- Load dartsass-sprockets, so it isn't required in the Gemfile
- Fix refreshing a column in a subform without sending the whole form

= 4.1.0
- Replace sassc-rails with dartsass-sprockets, as it's a compatible replacement, to ease migration to dartsass
- Use lowercase response headers as required by rack 3
- Add filters to list action
- Add prompt option to action link
- Support tabbed_by in show action too
- Support options hash for :add_new option, with mode: :popup to open create new form in a JS popup, and other options to change link texts
- Support setup option in tinymce config with function
- Support multiple values in constraints for columns
- Improve grouped search supporting to change the columns used with group clause
- Improve grouped search to support using virtual columns for calculations, defining which DB column use to calculate
- Improve grouped search supporting other SQL functions for calculate in grouped search, ignoring it in bottom search if rails don't support them in calculate (only sum, count, minimum, maximum average)
- Improve grouped search supporting using group_by with multiple columns or sql code
- Add disable_on_update_column setting to column to allow skipping disabling the form when a column changes and a request is sent to refresh other fields
- Rename active_scaffold_habtm_joins to active_scaffold_joins, active_scaffold_habtm_joins is now deprecated
- Support sorted_association_options_find with model name prefix
- Support empty_field_text per column
- Fix using nested with habtm association, shallow_delete enabled, delete action added but delete link removed
- Fix for jquery-ui-rails 8.0 (jQuery UI 14)

= 4.0.13
- Fix security_methods on destroy_existing

= 4.0.12.2