@@ -1,4 +1,5 @@
 - Columns using bitfields are not treated as number columns (e.g. don't get numeric class in list)
+- Fix loading tinymce when the form is loaded on page load
 
 = 4.1.2
 - Call cache_column_counts in get_row, so custom code changing queries to calculate counts is used when a row is refreshed too
